--- a/HTML/Selector - Clase/selectores.html
+++ b/HTML/Selector - Clase/selectores.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Selectores en CSS</title>
 
-    <link rel="stylesheet" type="text/css" href="C:\xampp\htdocs\CLASE\HTML\Selector - Clase\estilosGuiado.css">
+    <link rel="stylesheet" type="text/css" href="C:\XAMP\htdocs\CLASE\HTML\Selector - Clase\estilosGuiado.css">
 
 </head>
 
