--- a/HTML/Posicionamiento_1/posicionamiento.html
+++ b/HTML/Posicionamiento_1/posicionamiento.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ejercicio de Posicionamiento de Elementos</title>
-    <link rel="stylesheet" type="text/css" href="posicionamiento.css" />
+    <link rel="stylesheet" type="text/css" href="C:\XAMP\htdocs\CLASE\HTML\Posicionamiento_1\posicionamiento.css" />
 </head>
 
 <body>
@@ -47,7 +47,7 @@
     </div>
 
     <div class="fixed-sidebar">
-        <img src="" />
+        <img src="Futbol.jpg" />
         <ul>
             <li>Inicio</li>
             <li>Palas</li>
