--- a/HTML/Pseudo - Ejercicio/horario.html
+++ b/HTML/Pseudo - Ejercicio/horario.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ejercicios con Pseudoselectores</title>
 
-    <link href="C:\xampp\htdocs\CLASE\HTML\Pseudo - Ejercicio\estilosGuiado.css" type="text/css" rel="stylesheet" />
+    <link href="C:\XAMP\htdocs\CLASE\HTML\Pseudo - Ejercicio\horario.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
