--- a/HTML/GLOBAL/global.html
+++ b/HTML/GLOBAL/global.html
@@ -24,12 +24,32 @@
             </div>
         </nav>
 
-        <p><img src="pista.jpg" alt = "";></p> 
+        <img src="pista.jpg" alt = "";>
         
         <p class = "enlace">
-            Para comprar pulsqa
-            <a href="#">aqui</a>
+            Para comprar pulsa  <a href="#"> aqui </a>
         </p>
-    </div>
+
+        <h3>Juega al mejor padel del mundo</h3>
+
+        <hr class="linea-roja">
+
+
+        <div class = "contenedor">
+            <div class = "imagenes">
+                <img src = "inicialpremier.jpg">
+                <p>El padel</p>
+            </div>
+            <div class = "imagenes">
+                <img src = "inicialpremier1.jpg">
+                <p>En 3D</p>
+            </div>
+            <div class = "imagenes">
+                <img src = "inicialpremier.jpg">
+                <p>Vivelo!</p>
+            </div>
+        </div>
+
+        <hr class="linea-roja2">
 </body>
 </html>
