--- a/HTML/Posicionamiento_1/posicionamiento.html
+++ b/HTML/Posicionamiento_1/posicionamiento.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ejercicio de Posicionamiento de Elementos</title>
-    <link rel="stylesheet" type="text/css" href="posicionamiento2.css" />
+    <link rel="stylesheet" type="text/css" href="posicionamiento.css" />
 </head>
 
 <body>
@@ -29,25 +29,25 @@
 
         </nav>
         <figure id="img1">
-            <img src="" />
+            <img src="Futbol.jpg" />
             <figcaption>El</figcaption>
         </figure>
         <figure id="img2">
-            <img src="" />
+            <img src="Futbol.jpg" />
             <figcaption>Mejor</figcaption>
         </figure>
         <figure id="img3">
-            <img src="" />
+            <img src="Futbol.jpg" />
             <figcaption>Del</figcaption>
         </figure>
         <figure id="img4">
-            <img src="" />
+            <img src="Futbol.jpg" />
             <figcaption>mundo</figcaption>
         </figure>
     </div>
 
     <div class="fixed-sidebar">
-        <img src="" />
+        <img src="Futbol.jpg" />
         <ul>
             <li>Inicio</li>
             <li>Palas</li>
