--- a/HTML/GLOBAL/global.html
+++ b/HTML/GLOBAL/global.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="propio.css">
+    <link rel="stylesheet" href="global.css">
 
 </head>
 <body>
@@ -26,35 +26,6 @@
         </nav>
     </div>
 
-<<<<<<< HEAD
-        <img src="pista.jpg" alt = "";>
-        
-        <p class = "enlace">
-            Para comprar pulsa  <a href="#"> aqui </a>
-        </p>
-
-        <h3>Juega al mejor padel del mundo</h3>
-
-        <hr class="linea-roja">
-
-
-        <div class = "contenedor">
-            <div class = "imagenes">
-                <img src = "inicialpremier.jpg">
-                <p>El padel</p>
-            </div>
-            <div class = "imagenes">
-                <img src = "inicialpremier1.jpg">
-                <p>En 3D</p>
-            </div>
-            <div class = "imagenes">
-                <img src = "inicialpremier.jpg">
-                <p>Vivelo!</p>
-            </div>
-        </div>
-
-        <hr class="linea-roja2">
-=======
     <img src="increible_pista.avif" alt = "";>
         
     <div class = "frase">
@@ -64,6 +35,7 @@
         </p>
     </div>
 
+    <!-- RESULTADO 2 -->
     <h1>Juega al mejor padel del mundo</h1>
 
     <hr class="linea-roja">
@@ -85,23 +57,38 @@
 
     <hr class="linea-roja_2">
 
-
+    <!-- resultado 3 -->
     <div class = "parrafos">
 
         <img src = "palahead.jpg">
-        <p>
+        <p class = "juntos">
             En esta serie encontramos las palas más potentes de la marca como la nueva Delta Pro, 
             la nueva pala de Arturo Coello,  forma de diamante con 375g 
             y núcleo de Power Foam para imprimir una potencia máxima en los golpes.
         </p>
-        <p>
+        <p class = "juntos">
             La nueva serie Gamma destaca como siempre por su geometría destacada como una pala de 
             molde redondo oversize para potenciar  el control sobre todas las cosas.
         </p>
-        <p>
+        <p class = "separados">
             La novedad para este 2023 por parte de Head viene de la mano de la nueva serie Zephyr,dedicada a los jugadores con un nivel intermedio que están perfeccionándose en el mundo del pádel. Las palas de esta serie destacan por su gran ligereza, palas de forma redonda que incorporan la nueva tecnología Graphene 360 con núcleo de Comfort Foam para conseguir un punto dulce elevado con una gran salida de bola, pero sobre todo una manejabilidad excelente.
         </p>
     </div>
->>>>>>> 08e1c8b759cb614eb463241b19cd123cc8e7cea5
+
+<section class="imagenes4">
+    <img src="bullpadel.jpg" alt=""><img src="bullpadel.jpg" alt=""><img src="bullpadel.jpg" alt=""><img src="bullpadel.jpg" alt=""><img src="bullpadel.jpg" alt=""><img src="bullpadel.jpg" alt=""><img src="bullpadel.jpg" alt=""><img src="bullpadel.jpg" alt=""><img src="bullpadel.jpg" alt=""><img src="bullpadel.jpg" alt="">
+</section>
+
+</div>
+<footer>
+
+<div class="redes">
+    Calle Mayor
+    Madrid
+<img src="Instagram_icon-icons.com_66804.ico" alt="">
+</div>    
+</footer>
+
+
 </body>
 </html>
