--- a/JavaScript/GPT/Modulo_1.html
+++ b/JavaScript/GPT/Modulo_1.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "Modulo2.html"></script>
+    <script src = "Modulo_1.js"></script>
 </body>
 </html>
