--- a/JavaScript/Clase/4_Duplicados/set.html
+++ b/JavaScript/Clase/4_Duplicados/set.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+
+    <input type="file" id="file-input" />
+    <h3>Contenido del archivo:</h3>
+    <p id="contenido-archivo"></p>
+    
     <script src = "set.js"></script>
 </body>
 </html>
