--- a/JavaScript/Clase/5_EQUIPOS/jugadores.html
+++ b/JavaScript/Clase/5_EQUIPOS/jugadores.html
@@ -10,7 +10,8 @@
 		<h3>Contenido del archivo:</h3>
 		<p id="contenido-archivo"></p>
 
-    <script src = "jugadores.js"></script>
+
+    <script src = "jugadores2.js"></script>
 </body>
 </html>
 
