--- a/JavaScript/Clase/5_EQUIPOS/jugadores.html
+++ b/JavaScript/Clase/5_EQUIPOS/jugadores.html
@@ -11,7 +11,7 @@
 		<p id="contenido-archivo"></p>
 
 
-    <script src = "jugadores2.js"></script>
+    <script src = "jugadoresFunciones.js"></script>
 </body>
 </html>
 
