--- a/HTML/RA3/ejemplo.html
+++ b/HTML/RA3/ejemplo.html
@@ -7,14 +7,59 @@
     <link rel = "styleshest" href="icons.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">     <!--REFERENCIA DE GOOGLE-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/6.0.0-beta3/css/all.min.css">    <!-- REFERENCIA DE CLOUDFARE -->
+<style>
+    /* .parallax {
+background-image: url('casarosa.jpg');
+height: 600px;
+background-attachment: fixed; /*Fondo fijo, para dar efecto de
+paralaje*/
+/* background-position: center;
+background-repeat: no-repeat;
+background-size: cover; /*Con cover se cubre todo el contenedor en
+ancho y alto*/
+/* }
+.content {
+height: 500px;
+text-align: center;
+padding: 50px;
+} */ 
 
+div{padding:40px;}
+/* cssgradient.io00. */
+div:nth-child(1){
+background: linear-gradient(to right, rgba(176,174,238,1) 0%, rgba(29,30,31,1));
+}
+div:nth-child(2){
+background: linear-gradient(to right,red,brown,orange,yellow,blue,green,violet,pink);
+}
+div:nth-child(3){
+background: linear-gradient(to top, #000, #ccc);
+}
+div:nth-child(4){
+background: linear-gradient(to right,red 300px,brown 400px,orange 700px);
+}
+div:nth-child(5){
+background: radial-gradient(ellipse, rgba(176,174,238,1) 0%, rgba(29,30,31,1));
+}
+</style>
 </head>
 <body>
-    <span class="material-icons icon">nombre_icono</span>
+    <!-- <span class="material-icons icon">nombre_icono</span>
     <span class="material-icons icon">star</span>
     <span class="material-icons icon">favorite</span>
 
     <i class=“clase_del_icono”></i>
-    <i class=“fa-solid fa-cloud”></i>
+    <i class=“fa-solid fa-cloud”></i> -->
+<!-- 
+    <div class = "parallax">
+        <div class =  "content">
+            <h1>Jesus</h1>
+            <p>Eres un poco tonto, pero te queremos igual</p>
+        </div>
+    </div> -->
+
+    <div></div><div></div><div></div><div></div><div></div><div></div>
+    
+    
 </body>
 </html>
