--- a/JavaScript/Clase/5_EQUIPOS/jugadoresFunciones.html
+++ b/JavaScript/Clase/5_EQUIPOS/jugadoresFunciones.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="file" id="file-input" />
+    <input type="file" id="file-input">
 		<h3>Contenido del archivo:</h3>
 		<p id="contenido-archivo"></p>
 
+        <script src="jugadoresFunciones.js"></script>
 
-    <script src = "jugadores.js"></script>
 </body>
 </html>
 
