--- a/HTML/RA3/3.1/SVG/svg.html
+++ b/HTML/RA3/3.1/SVG/svg.html
@@ -19,13 +19,14 @@
     </style>
 </head>
 <body>
-
+    <!-- a) Crear un círculo de radio 20 pixels, en la posición 100,100 (X,Y). Viewbox de 200x200.  -->
     <svg viewBox="0 0 200 200" width="100" height="100">
         <circle cx="100" cy="100" r="20" fill="blue" />
     </svg>
 
+    <!-- b) Crear un círculo como el anterior, pero con un relleno rojo y línea (el círculo) verde. Viewbox de 200x200. -->
     <svg viewBox="0 0 200 200" width="100" height="100">
-        <circle cx="100" cy="100" r="20" fill="red" />
+        <circle cx="100" cy="100" r="20" fill="red" stroke = "green"; stroke-height: 2px />
     </svg>
         
 </body>
