--- a/HTML/RA3/3.2/Transiciones/transiciones.html
+++ b/HTML/RA3/3.2/Transiciones/transiciones.html
@@ -26,19 +26,20 @@
             <span>Contacto</span>
           </span>
           </a></li>
-        </ul>
+      </ul>
 
-        <div class = "cont1">Jesus</div>
-        <div class = "cont2">Neil</div>
-        <div class = "cont3">Khaled</div>
-        <div class = "cont4">Ivan</div>
-        <div class = "cont5">Isaac</div>
-        <div class = "cont6">Patricia</div>
-        <div class = "cont7">Natalia</div>
-        <div class = "cont8">Jandro</div>
-        <div class = "cont9">Mario</div>
-        <div class = "cont10">Daniel</div>
-        
+      <main class = "cont0">
+        <div class = "cont1"><p>Jesus</p></div>
+        <div class = "cont2"><p>Neil</p></div>
+        <div class = "cont3"><p>Khaled</p></div>
+        <div class = "cont4"><p>Ivan</p></div>
+        <div class = "cont5"><p>Isaac</p></div>
+        <div class = "cont6"><p>Patricia</p></div>
+        <div class = "cont7"><p>Natalia</p></div>
+        <div class = "cont8"><p>Jandro</p></div>
+        <div class = "cont9"><p>Mario</p></div>
+        <div class = "cont10"><p>Daniel</p></div>
+      </main>
 
         
 </body>
