--- a/HTML/RA3/3.2/Transiciones/transiciones.html
+++ b/HTML/RA3/3.2/Transiciones/transiciones.html
@@ -1,46 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="transiciones.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="transiciones.css">
 </head>
+
 <body>
-    <ul>
-        <li><a class="menuinicio" href="#" data-title="Inicio"><span>
-            <span>Inicio</span>
-          </span></a></li>
-        <li><a class="menu qsomos" href="#" data-title="Quienes Somos">
-          <span>
-            <span>Quienes Somos</span>
-          </span>
-          </a></li>
-          <li><a class="menu productos" href="#" data-title="Productos">
-          <span>
-            <span>Productos</span>
-          </span>
-          </a></li>
-            <li><a class="menu contacto" href="#" data-title="Contacto">
-          <span>
-            <span>Contacto</span>
-          </span>
-          </a></li>
-      </ul>
+  <ul>
+    <li><a class="menuinicio" href="#" data-title="Inicio"><span>
+          <span>Inicio</span>
+        </span></a></li>
+    <li><a class="menuqsomos" href="#" data-title="Quienes Somos">
+        <span>
+          <span>Quienes Somos</span>
+        </span>
+      </a></li>
+    <li><a class="menu productos" href="#" data-title="Productos">
+        <span>
+          <span>Productos</span>
+        </span>
+      </a></li>
+    <li><a class="menu contacto" href="#" data-title="Contacto">
+        <span>
+          <span>Contacto</span>
+        </span>
+      </a></li>
+  </ul>
 
-      <main class = "cont0">
-        <div class = "cont1"><p>Jesus</p></div>
-        <div class = "cont2"><p>Neil</p></div>
-        <div class = "cont3"><p>Khaled</p></div>
-        <div class = "cont4"><p>Ivan</p></div>
-        <div class = "cont5"><p>Isaac</p></div>
-        <div class = "cont6"><p>Patricia</p></div>
-        <div class = "cont7"><p>Natalia</p></div>
-        <div class = "cont8"><p>Jandro</p></div>
-        <div class = "cont9"><p>Mario</p></div>
-        <div class = "cont10"><p>Daniel</p></div>
-      </main>
+  <main class="cont0">
+    <div class="cont1">
+      <p>Jesus</p>
+    </div>
+    <div class="cont2">
+      <p>Neil</p>
+    </div>
+    <div class="cont3">
+      <p>Khaled</p>
+    </div>
+    <div class="cont4">
+      <p>Ivan</p>
+    </div>
+    <div class="cont5">
+      <p>Isaac</p>
+    </div>
+    <div class="cont6">
+      <p>Patricia</p>
+    </div>
+    <div class="cont7">
+      <p>Natalia</p>
+    </div>
+    <div class="cont8">
+      <p>Jandro</p>
+    </div>
+    <div class="cont9">
+      <p>Mario</p>
+    </div>
+    <div class="cont10">
+      <p>Daniel</p>
+    </div>
+  </main>
 
-        
+
 </body>
+
 </html>
