--- a/HTML/RA3/3.2/1_Transiciones/transiciones.html
+++ b/HTML/RA3/3.2/1_Transiciones/transiciones.html
@@ -4,30 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Transiciones</title>
   <link rel="stylesheet" href="transiciones.css">
 </head>
 
 <body>
   <ul>
-    <li><a class="menuinicio" href="#" data-title="Inicio"><span>
-          <span>Inicio</span>
-        </span></a></li>
-    <li><a class="menuqsomos" href="#" data-title="Quienes Somos">
+    <li>
+      <a class="menu inicio" href="#" data-title="Inicio">
         <span>
-          <span>Quienes Somos</span>
+          <span>Inicio</span>
         </span>
-      </a></li>
-    <li><a class="menu productos" href="#" data-title="Productos">
+      </a>
+    </li>
+    <li>
+      <a class="menu qsomos" href="#" data-title="Quienes Somos">
+        <span>
+          <span>Quienes Somos</span> 
+        </span>
+      </a>
+    </li>
+    <li>
+      <a class="menu productos" href="#" data-title="Productos">
         <span>
           <span>Productos</span>
         </span>
-      </a></li>
-    <li><a class="menu contacto" href="#" data-title="Contacto">
+      </a>
+    </li>
+    <li>
+      <a class="menu contacto" href="#" data-title="Contacto">
         <span>
           <span>Contacto</span>
         </span>
-      </a></li>
+      </a>
+    </li>
   </ul>
 
   <main class="cont0">
