--- a/HTML/PRACTICA_EVALUABLE/index.html
+++ b/HTML/PRACTICA_EVALUABLE/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kashmir
     </title>
+    <!-- IMPORTAR ICONOS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- IMPORTAR CSS -->
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -13,12 +16,15 @@
         <div class="logo">
             <img src="img/logo2.webp" alt="Logo" width="100px">
         </div>
+        <button class = "categoria">
+            <span class="material-icons icons">menu</span>
+        </button>
         <div class="menu">
-            <a href="#" class="menu-item">Mujer</a>
-            <a href="#" class="menu-item">Hombre</a>
+            <a href="#" class="menu-item">MUJER</a>
+            <a href="#" class="menu-item">HOMBRE</a>
             <input type="text" placeholder="Buscar..." class="buscador">
-            <a href="#" class="menu-item">Iniciar Sesión</a>
-            <a href="#" class="menu-item">Cesta</a>
+            <a href="#" class="menu-item">INICIO SESIÓN</a>
+            <a href="#" class="menu-item">CESTA</a>
         </div>
     </header>
 
