--- a/HTML/PRACTICA_EVALUABLE/index.html
+++ b/HTML/PRACTICA_EVALUABLE/index.html
@@ -9,6 +9,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- IMPORTAR CSS -->
     <link rel="stylesheet" href="index.css">
+
+    <!-- BIBLIOGRAFIA -->
+        <!-- Zara: https://www.zara.com/es/ -->
+        <!-- Pexels: https://www.pexels.com/es-es/  -->
 </head>
 <body>
     <!-- Cabecera -->
@@ -20,8 +24,8 @@
             <span class="material-icons icons">menu</span>
         </button>
         <div class="menu">
-            <a href="#" class="menu-item">MUJER</a>
-            <a href="#" class="menu-item">HOMBRE</a>
+            <a href="#mujer" class="menu-item">MUJER</a>
+            <a href="#hombre" class="menu-item">HOMBRE</a>
             <input type="text" placeholder="Buscar..." class="buscador">
             <a href="#" class="menu-item">INICIO SESIÓN</a>
             <a href="#" class="menu-item">CESTA</a>
@@ -67,14 +71,14 @@
         </div>
 
     <!-- PAGINA 1 -->
-    <div class="pag1">
+    <div class="pag1" id="mujer">
         <h1>REGALOS PARA ELLA</h1>
         <p>Celebre grandes momentos con los emblemáticos diseños de la Firma, desde emotivos detalles hasta 
             regalos especiales para sus seres queridos.</p>
 
         
 
-        <div class="productos">
+        <div class="productos" >
             <h4>DROP 01</h4>
             <div>
                 <img src="img/drop2-F/1.jpg" alt="FOTO1">
@@ -105,7 +109,7 @@
     </div>
 
     <!-- PAGINA 2 -->
-    <div class="pag2">
+    <div class="pag2" id="hombre">
         <h1>REGALOS PARA EL</h1>
         <p>Celebre grandes momentos con los emblemáticos diseños de la Firma,
         desde emotivos detalles hasta regalos especiales para sus seres queridos.</p>
