--- a/HTML/PRACTICA_EVALUABLE/index.html
+++ b/HTML/PRACTICA_EVALUABLE/index.html
@@ -15,6 +15,10 @@
         <!-- Pexels: https://www.pexels.com/es-es/  -->
 </head>
 <body>
+    <!-- Audio (CHROME PUEDE QUE BLOQUE EL AUDIO)-->
+    <audio autoplay loop>
+        <source src="Audio/LudovicoEinaudi.mp3" type="audio/mpeg">
+    </audio>
     <!-- Cabecera -->
     <header id = "header">
         <div class="logo">
