--- a/JavaScript/Plan estudio/dia1.html
+++ b/JavaScript/Plan estudio/dia1.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src = "dia.js"></script>
 </body>
-<script src="app.js"></script>
 </html>
