--- a/JavaScript/Objetos/Teroia1.html
+++ b/JavaScript/Objetos/Teroia1.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "miViaje.js"></script>
+    <script src = "prototipos.js"></script>
 </body>
 </html>
