--- a/JavaScript/Objetos/Teroia1.html
+++ b/JavaScript/Objetos/Teroia1.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "prototipos.js"></script>
+    <script src = "prototipos2.js"></script>
+    
 </body>
 </html>
