--- a/HTML/RA3/4_Jquery/Ejercicios/Ejercicio1Enunciado.html
+++ b/HTML/RA3/4_Jquery/Ejercicios/Ejercicio1Enunciado.html
@@ -28,11 +28,21 @@
 
 
 <ul>
-    <li><input type = "checkbox" class = "alternar">Ingredientes para la cena</li> 
-    <li><input type = "checkbox" class = "alternar">Completar el proyecto de HTML</li>
-    <li><input type = "checkbox" class = "alternar">Llamar a la madre</li>
-    <li><input type = "checkbox" class = "alternar">Estudiar para el examen de CSS</li>
-    <li><input type = "checkbox" class = "alternar">Hacer ejercicio</li>
+    <li>
+        <input type = "checkbox" class = "alternar">Ingredientes para la cena
+    </li> 
+    <li>
+        <input type = "checkbox" class = "alternar">Completar el proyecto de HTML
+    </li>
+    <li>
+        <input type = "checkbox" class = "alternar">Llamar a la madre
+    </li>
+    <li>
+        <input type = "checkbox" class = "alternar">Estudiar para el examen de CSS
+    </li>
+    <li>
+        <input type = "checkbox" class = "alternar">Hacer ejercicio
+    </li>
 </ul>
 
 <button id="eliminarCompletadas">Eliminar Tareas Completadas</button>
