--- a/JavaScript/PROYECTO/index.html
+++ b/JavaScript/PROYECTO/index.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Procesar Archivo CSV</h1>
-    <input type="file" id="file-input" />
-    <pre id="contenido-archivo"></pre>
-    <script src = "biblioteca.js"></script>
+    <script src = "constructores.js"></script>
 </body>
 </html>
