--- a/JavaScript/PROYECTO/index.html
+++ b/JavaScript/PROYECTO/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>CSV</h1>
+    <input type="file" id="file-input" />
+    <pre id="contenido-archivo"></pre>
+
+   
+
     <script src = "constructores.js"></script>
 </body>
 </html>
