--- a/JavaScript/PROYECTO/Parte_II/biblioteca.html
+++ b/JavaScript/PROYECTO/Parte_II/biblioteca.html
@@ -97,6 +97,7 @@
 	</section>
 	<script>
 
+
 		//LLAMA A UN ID, CREA UNA ETIQUETA , METE TEXTO Y LO INSTERTA
 		let altaLector = document.getElementById("alta-lector");
 		let bienvenido = document.createElement("p");
@@ -130,6 +131,8 @@
 		}
 
 
+		//Gestion d evento 
+		addEventListener( )
 	</script>
 </body>
 </html>
