--- a/JavaScript/PROYECTO/Parte_II/biblioteca.html
+++ b/JavaScript/PROYECTO/Parte_II/biblioteca.html
@@ -13,6 +13,7 @@
 	<h1>Biblioteca</h1>
 	<section id="importar">
 		<h2>Importar</h2>
+		<!-- LIBROS -->
 		<div>
 			<label>Archivo de libros:</label>
 			<input type="file" id="importar-input-libros">
@@ -96,5 +97,6 @@
 		<button id="prestamo-boton">Préstamo</button>
 	</section>
 	
+	<script src = "script.js"></script>
 </body>
 </html>
