--- a/JavaScript/PROYECTO/CONTENEDOR/prueba.html
+++ b/JavaScript/PROYECTO/CONTENEDOR/prueba.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <label>Archivo de libros:</label>
+			<input type="file" id="importar-input-libros">
     <script src = "prueba.js"></script>
 </body>
 </html>
