--- a/JavaScript/3_Proyecto/Objetos/Teroia1.html
+++ b/JavaScript/3_Proyecto/Objetos/Teroia1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "prototipos2.js"></script>
+    <script src = "Teoria1.js"></script>
     
 </body>
 </html>
